--- a/src/AzureQueuePoller/AzureQueuePoller-Net40.csproj
+++ b/src/AzureQueuePoller/AzureQueuePoller-Net40.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>TRACE;DEBUG;ASYNC_TARGETTING_PACK</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\bin\net40\AzureQueuePoller.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,6 +33,7 @@
     <DefineConstants>TRACE;ASYNC_TARGETTING_PACK</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\bin\net40\AzureQueuePoller.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CompilerServices.AsyncTargetingPack.Net4">
