--- a/src/nuspec/AzureQueuePoller.nuspec
+++ b/src/nuspec/AzureQueuePoller.nuspec
@@ -12,6 +12,14 @@
         <projectUrl>https://github.com/prabirshrestha/AzureQueuePoller</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>Azure Queue</tags>
+        <dependencies> 
+            <group>
+              <dependency id="WindowsAzure.Storage" version="1.7.0.0" />
+            </group>
+            <group targetFramework="net40">
+              <dependency id="Microsoft.CompilerServices.AsyncTargetingPack" version="1.0.0" />
+            </group>
+        </dependencies>
     </metadata>
     <files>
         <file src="..\..\LICENSE.txt" target="LICENSE.txt" />
